@@ -1,7 +1,7 @@
 Package: trtf
 Title: Transformation Trees and Forests
-Version: 0.1-1
-Date: 2017-02-09
+Version: 0.2-0
+Date: 2017-03-17
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org")
 Description: Recursive partytioning of transformation models with
